objects/Property__c.object
<CustomObject>
    <description>Real estate property tracked by the management system.</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Furnishing_Status__c</fullName>
        <label>Furnishing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Furnished</fullName>
                </value>
                <value>
                    <fullName>Semi-Furnished</fullName>
                </value>
                <value>
                    <fullName>Unfurnished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rent__c</fullName>
        <label>Rent</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Occupied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Property</label>
    <listViews>
        <fullName>All_Properties</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Furnishing_Status__c</columns>
        <columns>Rent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Properties</label>
    </listViews>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Description_Required</fullName>
        <active>true</active>
        <description>Description is required for every property (Long Text Area cannot use field-level required).</description>
        <errorConditionFormula>ISBLANK(Description__c)</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Description is required.</errorMessage>
    </validationRules>
</CustomObject>